Update from Transifex

--- a/resource.language.ast_es/resources/strings.po
+++ b/resource.language.ast_es/resources/strings.po
@@ -2013,10 +2013,6 @@ msgctxt "#13429"
 msgid "Allow hardware acceleration - VTBDecoder"
 msgstr "Permitir l'aceleración per hardware - VTBDecoder"
 
-msgctxt "#13430"
-msgid "Allow hardware acceleration - PRIME"
-msgstr "Permitir l'aceleración per hardware - PRIME"
-
 msgctxt "#13432"
 msgid "Allow hardware acceleration - VideoToolbox"
 msgstr "Permitir l'aceleración per hardware - VideoToolbox"
@@ -2137,10 +2133,6 @@ msgctxt "#14078"
 msgid "Colours"
 msgstr "Colores"
 
-msgctxt "#14085"
-msgid "Whitelist"
-msgstr "Llista blanca"
-
 msgctxt "#14086"
 msgid "Playback"
 msgstr "Reproducción"
@@ -2228,6 +2220,10 @@ msgstr "Rexón C"
 msgctxt "#14125"
 msgid "Input"
 msgstr "Entrada"
+
+msgctxt "#14126"
+msgid "Whitelist"
+msgstr "Llista blanca"
 
 msgctxt "#14200"
 msgid "Player"
@@ -2592,14 +2588,6 @@ msgstr "¿De xuru que quies anubrir esta canal?"
 msgctxt "#19040"
 msgid "Timers"
 msgstr "Temporizadores"
-
-msgctxt "#19041"
-msgid "Are you sure you want to rename this recording?"
-msgstr "¿De xuru que quies renomar esta grabación?"
-
-msgctxt "#19042"
-msgid "Are you sure you want to rename this timer?"
-msgstr "¿De xuru que quies renomar esti temporizador?"
 
 msgctxt "#19043"
 msgid "Recording"
@@ -3301,10 +3289,6 @@ msgctxt "#21341"
 msgid "No updates available"
 msgstr "Ensin anovamientos disponibles"
 
-msgctxt "#21342"
-msgid "There are currently no updates available for this add-on."
-msgstr "Anguaño nun hai anovamientos disponibles pa esti complementu."
-
 msgctxt "#21358"
 msgid "Enable UPnP support"
 msgstr "Activar el sofitu pa UPnP"
@@ -3773,10 +3757,6 @@ msgctxt "#24065"
 msgid "Add-on updated"
 msgstr "Anovóse'l complementu"
 
-msgctxt "#24069"
-msgid "Update"
-msgstr "Anovar"
-
 msgctxt "#24071"
 msgid "An unknown error has occurred."
 msgstr "Asocedió un fallu desconocíu."
@@ -3849,10 +3829,6 @@ msgctxt "#24121"
 msgid "Enter search string"
 msgstr "Introduz una cadena de gueta"
 
-msgctxt "#24122"
-msgid "Update all"
-msgstr "Anovar too"
-
 msgctxt "#24124"
 msgid "Next to the video"
 msgstr "Xunto al videu"
@@ -3873,6 +3849,10 @@ msgctxt "#24136"
 msgid "Would you like to enable this add-on?"
 msgstr "¿Prestaríate activar esti complementu?"
 
+msgctxt "#24138"
+msgid "Update"
+msgstr "Anovar"
+
 msgctxt "#24148"
 msgid "Incompatible add-ons"
 msgstr "Complementos incompatibles"
@@ -3884,6 +3864,10 @@ msgstr "Los complementos de darréu son incompatibles con esta versión de Kodi 
 msgctxt "#24152"
 msgid "The add-on is not compatible with this version of Kodi."
 msgstr "El complementu nun ye compatible con esta versión de Kodi."
+
+msgctxt "#24169"
+msgid "Normal"
+msgstr "Normal"
 
 msgctxt "#24992"
 msgid "System"
@@ -3912,6 +3896,10 @@ msgstr "Compl. de mio"
 msgctxt "#25000"
 msgid "Notifications"
 msgstr "Avisos"
+
+msgctxt "#25014"
+msgid "Manual"
+msgstr "Manual"
 
 msgctxt "#29902"
 msgid "Style"
@@ -4148,6 +4136,14 @@ msgstr "Nun pue alcontrase l'elementu siguiente a reproducir"
 msgctxt "#34202"
 msgid "Can't find a previous item to play"
 msgstr "Nun pue alcontrase l'elementu anterior a reproducir"
+
+msgctxt "#34221"
+msgid "Off"
+msgstr "Non"
+
+msgctxt "#34222"
+msgid "On"
+msgstr "Sí"
 
 msgctxt "#34300"
 msgid "Failed to start Zeroconf"
@@ -4433,14 +4429,6 @@ msgctxt "#36322"
 msgid "This category contains the settings for how the UPnP service is handled. UPnP is also called DLNA on most consumer electronics."
 msgstr "Esta estaya contién los axustes pa cómo se remana'l serviciu UPnP. UPnP llámase tamién DLNA na mayoría de productos de consumu."
 
-msgctxt "#36328"
-msgid "Enable remote users to control this application through the built-in web server."
-msgstr "Permite que los usuarios remotos controlen esta aplicación pente'l sirvidor web integráu."
-
-msgctxt "#36338"
-msgid "Allow programs on the network to control this application."
-msgstr "Permite que los programes de la rede controlen esta aplicación."
-
 msgctxt "#36351"
 msgid "Changes the way this application is displayed on the selected screen. Either in a window or fullscreen."
 msgstr "Camuda'l mou nel que s'amuesa esta aplicación na pantalla esbillada. Nuna ventana o a pantalla completa."
@@ -4468,10 +4456,6 @@ msgstr "Esta estaya contién los axustes del aforru d'enerxía."
 msgctxt "#36396"
 msgid "Here you can enable or disable master lock and define the PIN code used to unlock it. You can also specify which areas of the application would need a PIN to access them."
 msgstr "Equí pues activar o desactivar el bloquéu maestru y afitar un códigu PIN pa desbloquialu. Tamién pues especificar les árees nes que l'aplicación va riquir esi códigu p'acceder a elles."
-
-msgctxt "#36434"
-msgid "Allow hardware acceleration - MMAL"
-msgstr "Permitir l'aceleración per hardware - MMAL"
 
 msgctxt "#36502"
 msgid "Disabled"
@@ -4808,3 +4792,7 @@ msgstr "Ver como testu"
 msgctxt "#39111"
 msgid "original"
 msgstr "orixinal"
+
+msgctxt "#39141"
+msgid "Basic"
+msgstr "Básico"
