--- a/resource.language.de_de/resources/strings.po
+++ b/resource.language.de_de/resources/strings.po
@@ -4559,7 +4559,7 @@ msgstr "Einstellungen und Dateimanager"
 
 msgctxt "#12376"
 msgid "Set as default for all media"
-msgstr "Als Standardquelle für alle Medien verwenden"
+msgstr "Als Standard für alle Medien setzen"
 
 msgctxt "#12377"
 msgid "This will reset any previously saved values. Are you sure?"
@@ -12021,6 +12021,10 @@ msgctxt "#24184"
 msgid " (optional)"
 msgstr " (optional)"
 
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "Minimal: {0:s} / Nicht verfügbar{3:s}"
+
 msgctxt "#24991"
 msgid "Could not connect to repository."
 msgstr "Die Verbindung zum Repository kann nicht hergestellt werden."
@@ -12924,6 +12928,10 @@ msgstr "Nächstes Element konnte nicht gefunden werden"
 msgctxt "#34202"
 msgid "Can't find a previous item to play"
 msgstr "Vorheriges Element konnte nich gefunden werden"
+
+msgctxt "#34220"
+msgid "HDR status"
+msgstr "HDR-Status"
 
 msgctxt "#34221"
 msgid "Off"
