--- a/resource.language.et_ee/resources/strings.po
+++ b/resource.language.et_ee/resources/strings.po
@@ -12017,6 +12017,10 @@ msgctxt "#24184"
 msgid " (optional)"
 msgstr " (valikuline)"
 
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "Väikseim: {0:s} / pole saadaval{3:s}"
+
 msgctxt "#24991"
 msgid "Could not connect to repository."
 msgstr "Repositooriumiga ühendamine ebaõnnestus."
@@ -12932,6 +12936,10 @@ msgstr "Väljas"
 msgctxt "#34222"
 msgid "On"
 msgstr "Sees"
+
+msgctxt "#34224"
+msgid "Tone mapping method"
+msgstr "Värvikaardistuse meetod"
 
 msgctxt "#34300"
 msgid "Failed to start Zeroconf"
@@ -15235,7 +15243,7 @@ msgstr "Määrab graafikadraiveri kasutatavate esitluspuhvrite arvu. Vali 2, kui
 
 msgctxt "#36553"
 msgid "Tone mapping"
-msgstr "Tooni kaardistamine"
+msgstr "Värvikaardistus"
 
 msgctxt "#36554"
 msgid "off"
@@ -15247,7 +15255,7 @@ msgstr "Reinhard"
 
 msgctxt "#36556"
 msgid "Tone mapping parameter"
-msgstr "Tooni kaardistamise parameeter"
+msgstr "Värvikaardistuse parameeter"
 
 msgctxt "#36557"
 msgid "ACES Filmic"
