--- a/resource.language.ja_jp/resources/strings.po
+++ b/resource.language.ja_jp/resources/strings.po
@@ -10245,6 +10245,10 @@ msgctxt "#21341"
 msgid "No updates available"
 msgstr "利用可能なアップデートはありません"
 
+msgctxt "#21342"
+msgid "There are currently no versions available for this add-on."
+msgstr "現在、このアドオンで利用できるバージョンはありません。"
+
 msgctxt "#21343"
 msgid "Use video tags"
 msgstr "ビデオタグを使用する"
@@ -11793,6 +11797,10 @@ msgctxt "#24136"
 msgid "Would you like to enable this add-on?"
 msgstr "このアドオンを有効にしますか？"
 
+msgctxt "#24137"
+msgid "Install auto updates only"
+msgstr "自動更新のみをインストールする"
+
 msgctxt "#24138"
 msgid "Update"
 msgstr "アップデート"
@@ -11944,6 +11952,10 @@ msgstr "最小Ver: {0:s} => インストール済: {1:s} => 更新先: {2:s}{3:s
 msgctxt "#24184"
 msgid " (optional)"
 msgstr "(任意)"
+
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "最小Ver: {0:s} / 利用不可{3:s}"
 
 msgctxt "#24991"
 msgid "Could not connect to repository."
