--- a/resource.language.ro_ro/resources/strings.po
+++ b/resource.language.ro_ro/resources/strings.po
@@ -1617,6 +1617,10 @@ msgctxt "#435"
 msgid "No optical disc drive detected"
 msgstr "Nu a fost găsit nici un disc optic."
 
+msgctxt "#436"
+msgid "This video is stored on an optical disc (e.g. DVD, Blu-ray) and cannot be played as your device does not have an appropriate drive."
+msgstr "Acest video este stocat pe un disc optic (de ex. DVD, Blu-ray) și nu poate fi redat pentru că dispozitivul dumneavostră nu are o unitate potrivită."
+
 msgctxt "#437"
 msgid "Removable disk"
 msgstr "Disc detașabil"
@@ -3420,6 +3424,10 @@ msgstr "Dispozitiv pentru traversare personalizat"
 msgctxt "#1302"
 msgid "Volume control steps"
 msgstr "Pași control volum"
+
+msgctxt "#1374"
+msgid "Breezy"
+msgstr "Răcoros"
 
 msgctxt "#1375"
 msgid "Temperature"
@@ -9485,6 +9493,10 @@ msgctxt "#20225"
 msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
 msgstr "Acolo unde nu există copertă de album locală, se va folosi artă online. În cazul în care niciuna dintre acestea nu este disponibilă, se vor folosi imaginile de acoperire încorporate în fișierele de muzică"
 
+msgctxt "#20226"
+msgid "Movie set information folder"
+msgstr "Dosar informații colecție de filme"
+
 msgctxt "#20228"
 msgid "Use artist sortname when sorting by artist"
 msgstr "Folosiți numele de sortare al artistului atunci când sortați după artist"
@@ -10225,6 +10237,10 @@ msgctxt "#20471"
 msgid "Show empty TV shows"
 msgstr "Arată filmele seriale goale"
 
+msgctxt "#20472"
+msgid "Show all performers for music videos"
+msgstr "Arată toți cântăreții din videoclipurile muzicale"
+
 msgctxt "#21330"
 msgid "Show hidden files and directories"
 msgstr "Arată dosarele și fișierele ascunse"
@@ -10272,6 +10288,10 @@ msgstr "Actualizare automată"
 msgctxt "#21341"
 msgid "No updates available"
 msgstr "Nu sunt disponibili actualizări"
+
+msgctxt "#21342"
+msgid "There are currently no versions available for this add-on."
+msgstr "Momentan nu sunt disponibile alte versiuni pentru acest supliment"
 
 msgctxt "#21343"
 msgid "Use video tags"
@@ -11469,6 +11489,10 @@ msgctxt "#24048"
 msgid "VideoPlayer InputStream"
 msgstr "Flux de intrare redator video"
 
+msgctxt "#24049"
+msgid "Add-on has been marked deprecated in repository."
+msgstr "Suplimentul a fost marcat ca învechit în depozit."
+
 msgctxt "#24050"
 msgid "Available add-ons"
 msgstr "Suplimente disponibile"
@@ -11620,6 +11644,10 @@ msgstr "Se instalează suplimentul..."
 msgctxt "#24087"
 msgid "All repositories"
 msgstr "Toate depozitele"
+
+msgctxt "#24088"
+msgid "Failed to install repository"
+msgstr "Instalarea depozitului a eșuat"
 
 msgctxt "#24089"
 msgid "Add-on restarts"
@@ -11900,6 +11928,14 @@ msgstr "Utilizați tastatura virtuală Kodi"
 msgctxt "#24164"
 msgid "Addon \"{0:s}\" broken"
 msgstr "Addon „{0:s}” este stricat"
+
+msgctxt "#24166"
+msgid "Addon \"{0:s}\" deprecated"
+msgstr "Supliment „{0:s}” învechit"
+
+msgctxt "#24167"
+msgid "Addon marked as deprecated with following note:[CR][B][I]{0:s}[/I][/B][CR][CR]Do you want to enable?"
+msgstr "Suplimentul a fost marcat ca învechi cu următoarea notiță:[CR][B][I]{0:s}[/I][/B][CR][CR]Doriți să îl activați?"
 
 msgctxt "#24168"
 msgid "Deprecated: {0:s}"
@@ -12821,6 +12857,10 @@ msgctxt "#34202"
 msgid "Can't find a previous item to play"
 msgstr "Elementul anterior de redat nu poate fi găsit"
 
+msgctxt "#34220"
+msgid "HDR status"
+msgstr "Stare interval dinamic ridicat (HDR)"
+
 msgctxt "#34221"
 msgid "Off"
 msgstr "Oprită"
@@ -12828,6 +12868,10 @@ msgstr "Oprită"
 msgctxt "#34222"
 msgid "On"
 msgstr "Pornită"
+
+msgctxt "#34224"
+msgid "Tone mapping method"
+msgstr "Metodă de cartografiere nuanțe"
 
 msgctxt "#34300"
 msgid "Failed to start Zeroconf"
@@ -13116,6 +13160,14 @@ msgstr "Mișcați {0:s} spre stânga"
 msgctxt "#35099"
 msgid "Move {0:s} left ({1:d})"
 msgstr "Mișcați {0:s} spre stânga ({1:d})"
+
+msgctxt "#35100"
+msgid "Enable controller support"
+msgstr "Activează sprijinul controlatoarelor"
+
+msgctxt "#35102"
+msgid "Disable controllers when this device is present"
+msgstr "Dezactivează controlatoarele când acest dispozitiv este prezent"
 
 msgctxt "#35103"
 msgid "Buttons"
@@ -13917,6 +13969,10 @@ msgctxt "#36171"
 msgid "Select the zoom level that 4:3 videos are shown on widescreen displays."
 msgstr "Alegeți nivelul de mărire pentru video 4:3 care sunt afișate pe un ecran lat"
 
+msgctxt "#36172"
+msgid "Enable PRIME decoding of video files"
+msgstr "Activează decodarea PRIME a fișierelor video"
+
 msgctxt "#36173"
 msgid "Choose which short date format is used for displaying the date in the user interface."
 msgstr "Alegeți care format scurt să fie folosit pentru afișarea datei în interfața cu utilizatorul."
@@ -14653,6 +14709,10 @@ msgctxt "#36377"
 msgid "Use a mouse or touch screen device to control the interface. Note: Disabling will cause you to lose control over this application when no keyboard or remote is present."
 msgstr "Folosiți un maus sau un dispozitiv cu ecran tactil pentru a controla interfața. Atenție: Dezactivând această opțiune vă va face să pierdeți controlul asupra acestui program când nu este prezentă nicio tastatură sau telecomandă."
 
+msgctxt "#36378"
+msgid "Use a game controller to control the interface."
+msgstr "Folosiți un controlator de jocuri pentru a controla intefața."
+
 msgctxt "#36379"
 msgid "This category contains the settings for how Internet access is handled. The default web interface can also be selected here."
 msgstr "Această categorie conține setările pentru gestionarea accesului la Internet. De asemenea, aici poate fi aleasă și interfața web implicită."
@@ -14825,6 +14885,10 @@ msgctxt "#36421"
 msgid "Bypassing VDPAU mixer saves resources on low power systems but slightly reduces picture quality."
 msgstr "Trecând de VDPAU mixer salvează resurse pe sistemele de putere mică dar reduce puțin calitatea imaginii."
 
+msgctxt "#36422"
+msgid "Update official add-ons from"
+msgstr "Actualizează suplimentele oficiale din"
+
 msgctxt "#36424"
 msgid "Select what will happen when an item is selected in the guide: [Show context menu] Will trigger the context menu from where you can choose further actions; [Switch to channel] Will instantly tune to the related channel; [Show information] Will display a detailed information with plot and further options; [Record] Will create a recording timer for the selected item. [\"Smart select\"] The action is choosen dynamically, depending on whether the event is in the past, now or in the future."
 msgstr "Selectați ce se va întâmpla când un articol este selectat în ghid: [Afișați meniul contextual] Va declanșa meniul contextual de unde puteți alege acțiuni suplimentare; [Treceți la canal] Se vor acorda instantaneu la canalul aferent; [Afișare informații] Va afișa informații detaliate cu complot și opțiuni suplimentare; [Înregistrare] Va crea un cronometru de înregistrare pentru elementul selectat. [„Smart select”] Acțiunea este aleasă dinamic, în funcție de faptul dacă evenimentul este în trecut, acum sau în viitor."
@@ -14868,6 +14932,10 @@ msgstr "Când este activată, metoda de randare preferată este VAAPI și proces
 msgctxt "#36436"
 msgid "Select OS keyboard layout."
 msgstr "Selectați aspectul tastaturii sistemului de operare."
+
+msgctxt "#36438"
+msgid "Any repositories"
+msgstr "Oricare depozit"
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
@@ -15721,6 +15789,30 @@ msgctxt "#38073"
 msgid "Do you want to refresh information for this item now?"
 msgstr "Doriți să reîmprospătați informațiile pentru acest articol acum?"
 
+msgctxt "#38075"
+msgid "* All discs"
+msgstr "* Toate discurile"
+
+msgctxt "#38076"
+msgid "Disc title"
+msgstr "Titlu disc"
+
+msgctxt "#38077"
+msgid "Total discs"
+msgstr "Discuri totale"
+
+msgctxt "#38078"
+msgid "Original year"
+msgstr "An original"
+
+msgctxt "#38079"
+msgid "Original date"
+msgstr "Dată originală"
+
+msgctxt "#38081"
+msgid "Release status"
+msgstr "Stare lansare"
+
 msgctxt "#38100"
 msgid "Section that contains the settings for the playback of media"
 msgstr "Secțiune care conține setările pentru redarea fișierelor media"
@@ -16101,9 +16193,17 @@ msgctxt "#39116"
 msgid "Episode plot"
 msgstr "Intrigă episod"
 
+msgctxt "#39119"
+msgid "Last modified"
+msgstr "Ultima modificare"
+
 msgctxt "#39123"
 msgid "Artwork"
 msgstr "Creație artistică"
+
+msgctxt "#39137"
+msgid "Artwork level"
+msgstr "Nivel artă"
 
 msgctxt "#39140"
 msgid "Maximum"
