--- a/resource.language.ru_ru/resources/strings.po
+++ b/resource.language.ru_ru/resources/strings.po
@@ -6771,35 +6771,35 @@ msgstr "Вкл."
 
 msgctxt "#16100"
 msgid "All videos"
-msgstr "Всё видео"
+msgstr "Все видео"
 
 msgctxt "#16101"
 msgid "Unwatched"
-msgstr "Не просмотрено"
+msgstr "Непросмотренные"
 
 msgctxt "#16102"
 msgid "Watched"
-msgstr "Просмотрено"
+msgstr "Просмотренные"
 
 msgctxt "#16103"
 msgid "Mark as watched"
-msgstr "Отмет. как просмотренное"
+msgstr "Как просмотренное"
 
 msgctxt "#16104"
 msgid "Mark as unwatched"
-msgstr "Отмет. как непросмотренное"
+msgstr "Как непросмотренное"
 
 msgctxt "#16105"
 msgid "Edit title"
-msgstr "Изменить название"
+msgstr "Править название"
 
 msgctxt "#16106"
 msgid "Manage..."
-msgstr "Управление…"
+msgstr "Управлять..."
 
 msgctxt "#16107"
 msgid "Edit sort title"
-msgstr "Изм. название для сортировки"
+msgstr "Править название сортировки"
 
 msgctxt "#16200"
 msgid "Operation was aborted"
@@ -6855,7 +6855,11 @@ msgstr "Nearest neighbour"
 
 msgctxt "#16302"
 msgid "Bilinear"
-msgstr "Bilinear"
+msgstr "Билинейная"
+
+msgctxt "#16303"
+msgid "Bicubic (B-Spline)"
+msgstr "Бикубическая (B-сплайн)"
 
 msgctxt "#16304"
 msgid "Lanczos2"
@@ -6883,11 +6887,11 @@ msgstr "Sinc (программный)"
 
 msgctxt "#16310"
 msgid "Temporal"
-msgstr "Temporal"
+msgstr "Временной"
 
 msgctxt "#16311"
 msgid "Temporal / Spatial"
-msgstr "Temporal / Spatial"
+msgstr "Пространственно-временной"
 
 msgctxt "#16312"
 msgid "VDPAU - Noise reduction"
@@ -6896,6 +6900,10 @@ msgstr "Шумоподавление - VDPAU"
 msgctxt "#16313"
 msgid "VDPAU - Sharpness"
 msgstr "Резкость - VDPAU"
+
+msgctxt "#16314"
+msgid "Bicubic (Mitchell)"
+msgstr "Бикубический (Митчелл)"
 
 msgctxt "#16315"
 msgid "Lanczos3 - Optimised"
@@ -6971,7 +6979,7 @@ msgstr "Переход дисплея в спящий режим через"
 
 msgctxt "#17997"
 msgid "{0:d} MByte"
-msgstr "{0:d} Мб"
+msgstr "{0:d} МБ"
 
 msgctxt "#17998"
 msgid "{0:d} hours"
@@ -7039,7 +7047,7 @@ msgstr "Без шифрования"
 
 msgctxt "#19014"
 msgid "Fixed"
-msgstr "Фиксированн."
+msgstr "Фикс."
 
 msgctxt "#19015"
 msgid "Encryption"
