--- a/resource.language.sk_sk/resources/strings.po
+++ b/resource.language.sk_sk/resources/strings.po
@@ -1617,6 +1617,10 @@ msgctxt "#435"
 msgid "No optical disc drive detected"
 msgstr "Nenašla sa žiadna optická mechanika"
 
+msgctxt "#436"
+msgid "This video is stored on an optical disc (e.g. DVD, Blu-ray) and cannot be played as your device does not have an appropriate drive."
+msgstr "Toto video je uložené na optickom disku (napr. DVD, Blu-ray) a nemôže byť prehrané, pretože vaše zariadenie nemá príslušnú jednotku."
+
 msgctxt "#437"
 msgid "Removable disk"
 msgstr "Vymeniteľný disk"
@@ -3217,6 +3221,14 @@ msgctxt "#1051"
 msgid "Enter web address"
 msgstr "Zadajte webovú adresu"
 
+msgctxt "#1052"
+msgid "Require authentication"
+msgstr "Vyžaduje overenie"
+
+msgctxt "#1053"
+msgid "Choose whether requests to the web server require a username and a password, which must be set below if enabled. It is recommended to always leave this setting enabled."
+msgstr "Vyberte, či požiadavky na webový server vyžadujú používateľské meno a heslo, ktoré je potrebné nastaviť nižšie, ak sú povolené. Odporúča sa vždy ponechať toto nastavenie povolené."
+
 msgctxt "#1180"
 msgid "Proxy type"
 msgstr "Typ proxy"
@@ -3412,6 +3424,10 @@ msgstr "Vlastné zariadenie na preposielanie signálu"
 msgctxt "#1302"
 msgid "Volume control steps"
 msgstr "Kroky pre ovládanie hlasitosti"
+
+msgctxt "#1374"
+msgid "Breezy"
+msgstr "Sviežo"
 
 msgctxt "#1375"
 msgid "Temperature"
@@ -3924,6 +3940,10 @@ msgstr "Upraviť zdroj programov"
 msgctxt "#10057"
 msgid "Edit file source"
 msgstr "Upraviť zdroj súborov"
+
+msgctxt "#10058"
+msgid "Remove tag from library"
+msgstr "Vymazať značku z knižnice"
 
 msgctxt "#10099"
 msgid "Pointer"
@@ -4552,6 +4572,10 @@ msgstr "Doba zobrazenia každého obrázku"
 msgctxt "#12379"
 msgid "Use pan and zoom effects"
 msgstr "Používať efekty priblíženia a posunutia obrázku"
+
+msgctxt "#12381"
+msgid "Switch to visualisation on playback"
+msgstr "Prepnúť na vizualizácie pri prehrávaní"
 
 msgctxt "#12382"
 msgid "{0:s} xx"
@@ -5476,6 +5500,10 @@ msgstr "Povoliť hardvérovú akceleráciu - CrystalHD"
 msgctxt "#13429"
 msgid "Allow hardware acceleration - VTBDecoder"
 msgstr "Zapnúť hardvérovú akceleráciu - VTBDecoder"
+
+msgctxt "#13430"
+msgid "Allow using DRM PRIME decoder"
+msgstr "Povoliť použitie DRM PRIME dekodéra"
 
 msgctxt "#13431"
 msgid "Pixel shaders"
@@ -12628,6 +12656,10 @@ msgstr "Nepodarilo sa nájsť ďalšiu položku"
 msgctxt "#34202"
 msgid "Can't find a previous item to play"
 msgstr "Nepodarilo sa nájsť predošlú položku"
+
+msgctxt "#34220"
+msgid "HDR status"
+msgstr "HDR status"
 
 msgctxt "#34221"
 msgid "Off"
