--- a/resource.language.sv_se/resources/strings.po
+++ b/resource.language.sv_se/resources/strings.po
@@ -3727,7 +3727,7 @@ msgstr "Delvis"
 
 msgctxt "#1450"
 msgid "Put display to sleep when idle"
-msgstr "Försätt bildskärmen i viloläge vid inaktivitet"
+msgstr "Försätt bildskärm i viloläge vid inaktivitet"
 
 msgctxt "#2050"
 msgid "Runtime"
@@ -13359,7 +13359,7 @@ msgstr "ALL YOUR BASE ARE BELONG[CR]TO US"
 
 msgctxt "#35201"
 msgid "Gameplay"
-msgstr "Gameplay"
+msgstr "Spelupplevelse"
 
 msgctxt "#35203"
 msgid "Enable rewind if supported"
