--- a/resource.language.ta_in/resources/strings.po
+++ b/resource.language.ta_in/resources/strings.po
@@ -95,7 +95,7 @@ msgstr "மார்ச்சு"
 
 msgctxt "#24"
 msgid "April"
-msgstr "ஏப்ரில்"
+msgstr "ஏப்ரல்"
 
 msgctxt "#25"
 msgid "May"
@@ -171,7 +171,7 @@ msgstr "மார்ச்சு"
 
 msgctxt "#54"
 msgid "Apr"
-msgstr "ஏப்ரில்"
+msgstr "ஏப்ரல்"
 
 msgctxt "#55"
 msgid "May"
@@ -393,6 +393,18 @@ msgctxt "#122"
 msgid "Confirm delete"
 msgstr "நீக்குவதை உறுதிசெய்"
 
+msgctxt "#123"
+msgid "Would you like to copy the selected file(s)?"
+msgstr "தெரிவுசெய்த கோர்ப்பு(களை) பிரதியிடப் போகிறீர்களா?"
+
+msgctxt "#124"
+msgid "Would you like to move the selected file(s)?"
+msgstr "தெரிவுசெய்த கோர்ப்பு(களை) வேறிடம் மாற்றப் போகிறீர்களா?"
+
+msgctxt "#125"
+msgid "Would you like to delete the selected file(s)?[CR]Warning - this action can't be undone!"
+msgstr "தெரிவுசெய்த கோர்ப்பு(களை) அழிக்கப் போகிறீர்களா?\n[CR]எச்சரிக்கை - இச் செயல் மீளப்பெற முடியாது!"
+
 msgctxt "#126"
 msgid "Status"
 msgstr "நிலை"
@@ -577,6 +589,10 @@ msgctxt "#173"
 msgid "Display 4:3 videos as"
 msgstr "4:3 காணொளிகளை காண்பிக்கவும்"
 
+msgctxt "#174"
+msgid "Compiled:"
+msgstr "கோர்க்கப்பட்டது:"
+
 msgctxt "#175"
 msgid "Moods"
 msgstr "விதங்கள்"
@@ -584,6 +600,14 @@ msgstr "விதங்கள்"
 msgctxt "#176"
 msgid "Styles"
 msgstr "பாணிகள்"
+
+msgctxt "#177"
+msgid "{0:s} successfully started"
+msgstr "{0:s} வெற்றிகரமாக தொடங்கியது"
+
+msgctxt "#178"
+msgid "{0:s} has been successfully started."
+msgstr "{0:s} வெற்றிகரமாக தொடங்கப்பட்டது."
 
 msgctxt "#179"
 msgid "Song"
@@ -625,6 +649,10 @@ msgctxt "#188"
 msgid "Select all"
 msgstr "அனைத்தையும் தேர்வுசெய்"
 
+msgctxt "#189"
+msgid "Scanning media information"
+msgstr "ஊடகத்தகவல்கள் அலசப்படுகிறது"
+
 msgctxt "#190"
 msgid "Save"
 msgstr "பதிவுசெய்"
@@ -645,9 +673,17 @@ msgctxt "#194"
 msgid "Searching..."
 msgstr "தேடல்..."
 
+msgctxt "#195"
+msgid "No information found!"
+msgstr "ஒரு தகவலுமில்லை!"
+
 msgctxt "#196"
 msgid "Select movie:"
 msgstr "திரைப்படம் தேர்வு செய்க:"
+
+msgctxt "#197"
+msgid "Querying {0:s} information"
+msgstr "{0:s} தகவல்கள் பெறப்படுகிறது"
 
 msgctxt "#198"
 msgid "Loading movie details"
@@ -800,6 +836,10 @@ msgstr "பெரிதாக்குதல்"
 msgctxt "#239"
 msgid "Clear playlist on finish"
 msgstr "முடியும்போது பட்டியலை நீக்கு"
+
+msgctxt "#241"
+msgid "Full screen #{0:d}"
+msgstr "முழுத்திரை #{0:d}"
 
 msgctxt "#242"
 msgid "Windowed"
