--- a/resource.language.tr_tr/resources/strings.po
+++ b/resource.language.tr_tr/resources/strings.po
@@ -10739,7 +10739,7 @@ msgstr "Sabit"
 
 msgctxt "#21462"
 msgid "Bottom of video"
-msgstr "Videonun en altında"
+msgstr "Videonun alt tarafında"
 
 msgctxt "#21463"
 msgid "Below video"
@@ -10747,7 +10747,7 @@ msgstr "Videonun altında"
 
 msgctxt "#21464"
 msgid "Top of video"
-msgstr "Videonun en üstünde"
+msgstr "Videonun üst tarafında"
 
 msgctxt "#21465"
 msgid "Above video"
@@ -12011,7 +12011,7 @@ msgstr "Minimum: {0:s} => Yüklenecek: {2:s}{3:s}"
 
 msgctxt "#24182"
 msgid "Minimum: {0:s} / Installed: {1:s}{3:s}"
-msgstr "Minimum: {0:s} => Yüklenen: {2:s}{3:s}"
+msgstr "Minimum: {0:s} => Yüklenen: {1:s}{3:s}"
 
 msgctxt "#24183"
 msgid "Minimum: {0:s} / Installed: {1:s} => Update to: {2:s}{3:s}"
@@ -12020,6 +12020,10 @@ msgstr "Minimum: {0:s} / Yüklenen: {1:s} => Yeni Versiyon: {2:s}{3:s}"
 msgctxt "#24184"
 msgid " (optional)"
 msgstr " (isteğe bağlı)"
+
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "Minimum: {0:s} / Mevcut değil{3:s}"
 
 msgctxt "#24991"
 msgid "Could not connect to repository."
@@ -12659,7 +12663,7 @@ msgstr "Yapılandır"
 
 msgctxt "#33054"
 msgid "Seasons"
-msgstr "Sezonlar"
+msgstr "Sezon"
 
 msgctxt "#33055"
 msgid "Use your"
