--- a/resource.language.vi_vn/resources/strings.po
+++ b/resource.language.vi_vn/resources/strings.po
@@ -1173,6 +1173,14 @@ msgctxt "#321"
 msgid "Error cleaning artists"
 msgstr "Lỗi khi xóa ca sĩ"
 
+msgctxt "#322"
+msgid "Cleaning genres, roles etc...."
+msgstr "Đang xóa các thể loại, quyền, v.v..."
+
+msgctxt "#323"
+msgid "Error cleaning genres, roles etc."
+msgstr "Lỗi xóa các thể loại, quyền, v.v..."
+
 msgctxt "#324"
 msgid "Cleaning paths..."
 msgstr "Đang xóa đường dẫn..."
@@ -3821,6 +3829,10 @@ msgctxt "#10104"
 msgid "Volume bar"
 msgstr "Thanh âm lượng"
 
+msgctxt "#10106"
+msgid "Context menu"
+msgstr "Trình đơn ngữ cảnh"
+
 msgctxt "#10107"
 msgid "Notification dialog"
 msgstr "Hộp thoại thông báo"
@@ -3852,6 +3864,14 @@ msgstr "Bảng điều khiển Nhạc"
 msgctxt "#10122"
 msgid "Visualization preset list"
 msgstr "Danh sách mẫu thiết lập trực quan"
+
+msgctxt "#10123"
+msgid "Video OSD settings"
+msgstr "Cài đặt ODS Video"
+
+msgctxt "#10124"
+msgid "Audio OSD settings"
+msgstr "Cài đặt ODS Âm thanh"
 
 msgctxt "#10125"
 msgid "Video bookmarks"
@@ -3913,6 +3933,10 @@ msgctxt "#10142"
 msgid "Fullscreen info"
 msgstr "Thông tin toàn màn hình"
 
+msgctxt "#10145"
+msgid "Slider dialog"
+msgstr "Hộp thoại Trượt"
+
 msgctxt "#10146"
 msgid "Add-on info"
 msgstr "Thông tin tiện ích"
@@ -3925,6 +3949,10 @@ msgctxt "#10150"
 msgid "Peripheral settings"
 msgstr "Cài đặt ngoại vi"
 
+msgctxt "#10151"
+msgid "Extended progress dialog"
+msgstr "Hộp thoại tiến trình mở rộng"
+
 msgctxt "#10152"
 msgid "Media filter"
 msgstr "Bộ lọc đa phương tiện"
@@ -3932,6 +3960,10 @@ msgstr "Bộ lọc đa phương tiện"
 msgctxt "#10153"
 msgid "Subtitle search"
 msgstr "Tìm kiếm phụ đề"
+
+msgctxt "#10157"
+msgid "OSD CMS settings"
+msgstr "Cài đặt CMS ODS"
 
 msgctxt "#10159"
 msgid "Subtitle OSD settings"
@@ -4029,9 +4061,41 @@ msgctxt "#10600"
 msgid "PVR guide info"
 msgstr "Thông tin lịch phát sóng PVR"
 
+msgctxt "#10601"
+msgid "PVR recording info"
+msgstr "Thông tin ghi PVR"
+
+msgctxt "#10602"
+msgid "PVR timer setting"
+msgstr "Cài đặt hẹn giờ PVR"
+
+msgctxt "#10603"
+msgid "PVR group manager"
+msgstr "Quản lý nhóm PVR"
+
+msgctxt "#10604"
+msgid "PVR channel manager"
+msgstr "Quản lý kênh PVR"
+
 msgctxt "#10605"
 msgid "PVR guide search"
 msgstr "Tìm lịch phát sóng PVR"
+
+msgctxt "#10606"
+msgid "PVR channel scan"
+msgstr "Quét kênh PVR"
+
+msgctxt "#10607"
+msgid "PVR update progress"
+msgstr "Tiến trình cập nhật PVR"
+
+msgctxt "#10608"
+msgid "PVR OSD channels"
+msgstr "Kênh OSD PVR"
+
+msgctxt "#10609"
+msgid "PVR OSD guide"
+msgstr "Hướng dẫn OSD PVR"
 
 msgctxt "#10700"
 msgid "TV channels"
