--- a/resource.language.zh_cn/resources/strings.po
+++ b/resource.language.zh_cn/resources/strings.po
@@ -3425,6 +3425,10 @@ msgctxt "#1302"
 msgid "Volume control steps"
 msgstr "音量控制级数"
 
+msgctxt "#1374"
+msgid "Breezy"
+msgstr "微风"
+
 msgctxt "#1375"
 msgid "Temperature"
 msgstr "温度"
@@ -12016,6 +12020,10 @@ msgstr "最低：{0:s} / 已安装：{1:s} => 更新到：{2:s}{3:s}"
 msgctxt "#24184"
 msgid " (optional)"
 msgstr "（可选）"
+
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "最低：{0:s} / 不可用{3:s}"
 
 msgctxt "#24991"
 msgid "Could not connect to repository."
