--- a/resource.language.ko_kr/resources/strings.po
+++ b/resource.language.ko_kr/resources/strings.po
@@ -12021,6 +12021,10 @@ msgctxt "#24184"
 msgid " (optional)"
 msgstr "(옵션)"
 
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "최소: {0:s} / 사용할 수 없음{3:s}"
+
 msgctxt "#24991"
 msgid "Could not connect to repository."
 msgstr "저장소에 연결할 수 없습니다."
