--- a/resource.language.pt_br/resources/strings.po
+++ b/resource.language.pt_br/resources/strings.po
@@ -12021,6 +12021,10 @@ msgctxt "#24184"
 msgid " (optional)"
 msgstr " (opcional)"
 
+msgctxt "#24185"
+msgid "Minimum: {0:s} / Not available{3:s}"
+msgstr "Mínimo: {0:s} / Indisponível{3:s}"
+
 msgctxt "#24991"
 msgid "Could not connect to repository."
 msgstr "Não pude me conectar ao repositório."
@@ -12924,6 +12928,10 @@ msgstr "Não existe um próximo item"
 msgctxt "#34202"
 msgid "Can't find a previous item to play"
 msgstr "Não existe um item anterior"
+
+msgctxt "#34220"
+msgid "HDR status"
+msgstr "Estatus HDR"
 
 msgctxt "#34221"
 msgid "Off"
