--- a/game.controller.sg1000/resources/language/resource.language.da_dk/strings.po
+++ b/game.controller.sg1000/resources/language/resource.language.da_dk/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: game.controller.sg1000\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: 2014-05-30 17:00+8\n"
-"PO-Revision-Date: 2021-07-31 01:17+0000\n"
+"PO-Revision-Date: 2021-10-25 09:12+0000\n"
 "Last-Translator: Christian Gade <gade@kodi.tv>\n"
 "Language-Team: Danish <https://kodi.weblate.cloud/projects/kodi-add-ons-game/game-controller-sg1000/da_dk/>\n"
 "Language: da_dk\n"
@@ -15,15 +15,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.7.2\n"
+"X-Generator: Weblate 4.8\n"
 
 msgctxt "Addon Summary"
 msgid "Sega SG-1000 controller"
-msgstr ""
+msgstr "Sega SG-1000 controller"
 
 msgctxt "Addon Description"
 msgid "The SG-1000, also known as the Computer Videogame SG-1000, was Sega's first entry into the console business in 1983. However, due to market saturation and the Video Game Crash of 1983, it was not commercially successful."
-msgstr ""
+msgstr "SG-1000, også kendt som computervideospillet SG-1000, var Segas første indtræden i konsolbranchen i 1983. Men på grund af markedsmætning og videospilkrakket i 1983 var det ikke kommercielt succesfuldt."
 
 msgctxt "Addon Disclaimer"
 msgid "Image credit: OpenEmu (openemu.org)"
@@ -31,7 +31,7 @@ msgstr "Kildeangivelse: OpenEmu (openemu.org)"
 
 msgctxt "#30000"
 msgid "Sega SG-1000"
-msgstr ""
+msgstr "Sega SG-1000"
 
 msgctxt "#30001"
 msgid "Button 1"
