--- a/game.controller.vb/resources/language/resource.language.da_dk/strings.po
+++ b/game.controller.vb/resources/language/resource.language.da_dk/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: game.controller.vb\n"
 "Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: 2014-05-30 17:00+8\n"
-"PO-Revision-Date: 2021-07-31 01:17+0000\n"
+"PO-Revision-Date: 2021-10-27 18:07+0000\n"
 "Last-Translator: Christian Gade <gade@kodi.tv>\n"
 "Language-Team: Danish <https://kodi.weblate.cloud/projects/kodi-add-ons-game/game-controller-vb/da_dk/>\n"
 "Language: da_dk\n"
@@ -15,15 +15,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.7.2\n"
+"X-Generator: Weblate 4.8\n"
 
 msgctxt "Addon Summary"
 msgid "Nintendo Virtual Boy controller"
-msgstr ""
+msgstr "Nintendo Virtual Boy controller"
 
 msgctxt "Addon Description"
 msgid "The Virtual Boy is a 32-bit console released by Nintendo in 1995. While Nintendo promised a virtual reality experience, the red monochrome display and bulky table-mounted headset lead to a poor immersive experience."
-msgstr ""
+msgstr "The Virtual Boy er en 32-bit konsol udgivet af Nintendo i 1995. Mens Nintendo lovede en virtual reality-oplevelse, førte det røde monokrome display og det store bordmonterede headset til en dårlig fordybende oplevelse."
 
 msgctxt "Addon Disclaimer"
 msgid "Image credit: OpenEmu (openemu.org)"
@@ -31,7 +31,7 @@ msgstr "Kildeangivelse: OpenEmu (openemu.org)"
 
 msgctxt "#30000"
 msgid "Nintendo Virtual Boy"
-msgstr ""
+msgstr "Nintendo Virtual Boy"
 
 msgctxt "#30001"
 msgid "A"
@@ -51,40 +51,40 @@ msgstr "Vælg"
 
 msgctxt "#30005"
 msgid "Left Up"
-msgstr ""
+msgstr "Venstre op"
 
 msgctxt "#30006"
 msgid "Left Right"
-msgstr ""
+msgstr "Venstre højre"
 
 msgctxt "#30007"
 msgid "Left Down"
-msgstr ""
+msgstr "Venstre ned"
 
 msgctxt "#30008"
 msgid "Left Left"
-msgstr ""
+msgstr "Venstre venstre"
 
 msgctxt "#30009"
 msgid "Right Up"
-msgstr ""
+msgstr "Højre op"
 
 msgctxt "#30010"
 msgid "Right Right"
-msgstr ""
+msgstr "Højre højre"
 
 msgctxt "#30011"
 msgid "Right Down"
-msgstr ""
+msgstr "Højre ned"
 
 msgctxt "#30012"
 msgid "Right Left"
-msgstr ""
+msgstr "Hejre venstre"
 
 msgctxt "#30013"
 msgid "Left Bumper"
-msgstr ""
+msgstr "Venstre bumper"
 
 msgctxt "#30014"
 msgid "Right Bumper"
-msgstr ""
+msgstr "Højre bumper"
